// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLayout is rendered correctly 1`] = `
<body
  class="js-focus-within"
>
  <div>
    <div
      class="makeStyles-section-1"
      style="margin-top: 44px;"
    >
      <div
        class="MuiContainer-root HvContainer-root makeStyles-container-2 MuiContainer-maxWidthXl HvContainer-maxWidthXl"
      >
        <div />
      </div>
    </div>
  </div>
</body>
`;

exports[`withLayout is rendered correctly 2`] = `
<body
  class="js-focus-within"
>
  <div>
    <div
      class="makeStyles-section-1"
      style="margin-top: 44px;"
    >
      <div
        class="MuiContainer-root HvContainer-root makeStyles-container-2 MuiContainer-maxWidthXl HvContainer-maxWidthXl"
      >
        <div />
      </div>
    </div>
  </div>
  <div>
    <div
      class="makeStyles-section-5 makeStyles-hasFooter-7"
      style="margin-top: 44px;"
    >
      <div
        class="MuiContainer-root HvContainer-root makeStyles-container-6 MuiContainer-maxWidthXl HvContainer-maxWidthXl"
      >
        <div />
      </div>
    </div>
    <footer
      class="HvFooter-root"
    >
      <p
        class="HvFooter-name HvTypography-root HvTypography-highlightText"
      >
        Hitachi Vantara
      </p>
      <div
        class="HvFooter-rightContainer"
      >
        <p
          class="HvFooter-copyright HvTypography-root HvTypography-normalText"
        >
          © Hitachi Vantara Corporation 2021. All Rights Reserved.
        </p>
      </div>
    </footer>
  </div>
</body>
`;
